# ChangeLog for dev-libs/apr-util
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.104 2007/11/16 20:40:31 nixnut Exp $

  16 Nov 2007; nixnut <nixnut@gentoo.org> apr-util-1.2.10.ebuild:
  Stable on ppc wrt bug 198866

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> apr-util-1.2.10.ebuild:
  alpha/ia64 stable wrt #198866

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> apr-util-1.2.10.ebuild:
  amd64 stable, bug 198866

  13 Nov 2007; Dawid Węgliński <cla@gentoo.org> apr-util-1.2.10.ebuild:
  Stable on x86 (bug #198866)

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> apr-util-1.2.10.ebuild:
  Stable on ppc64; bug #198866

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> apr-util-1.2.10.ebuild:
  Stable for HPPA (bug #198866).

  12 Nov 2007; Ferris McCormick <fmccor@gentoo.org> apr-util-1.2.10.ebuild:
  Sparc stable --- Bug #198866 --- Good for two months.

  09 Sep 2007; Benedikt Böhm <hollow@gentoo.org> apr-util-1.2.10.ebuild:
  fix #188485

*apr-util-1.2.10 (08 Sep 2007)

  08 Sep 2007; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.2.10.ebuild:
  version bump; #191733

  08 Aug 2007; Timothy Redaelli <drizzt@gentoo.org>
  apr-util-0.9.12-r1.ebuild:
  Stable on ppc wrt #169507.

  31 Jul 2007; Christian Heim <phreak@gentoo.org> apr-util-1.2.8-r1.ebuild:
  Use >=dev-libs/apr-${PV} instead of ~dev-libs/apr-${PV}. The "~" limits us
  to the current PV, and doesn't allow later versions.'

  10 Jul 2007; Raúl Porcel <armin76@gentoo.org> apr-util-0.9.12-r1.ebuild:
  alpha/x86 stable wrt #169507

  10 Jul 2007; Jeroen Roovers <jer@gentoo.org> apr-util-0.9.12-r1.ebuild:
  Stable for HPPA (bug #169507).

  10 Jul 2007; Markus Rothe <corsair@gentoo.org> apr-util-0.9.12-r1.ebuild:
  Stable on ppc64; bug #169507

  08 Jul 2007; Christian Heim <phreak@gentoo.org> apr-util-1.2.8-r1.ebuild:
  Fix the compilation issue with mysql (#184636 - Rajiv Aaron Manglani <rajiv