@@ -1,0 +1,6 @@
+MD5 020ea947446dca2d1210c099c7a4c837 apr-1.2.12.tar.gz 1127522
+RMD160 912c34e412b42e678288727b811ba35f03d07b6b apr-1.2.12.tar.gz 1127522
+SHA256 23759142c483be869a0aec0529c5b8c94745b4dfd1c2c23f38417f4e02adcead apr-1.2.12.tar.gz 1127522
+MD5 e292942e22edd21b68609086352212e4 apr-util-1.2.12.tar.gz 668292
+RMD160 438528fe4d207dc2290de80ccbd2973266853f8a apr-util-1.2.12.tar.gz 668292
+SHA256 7d70ff17bec733bdb04a6653a8e9c15ab7d88429dac91a4ae58c1db5caaee07f apr-util-1.2.12.tar.gz 668292
