@@ -1,3 +1,0 @@
-MD5 a2e2e54d65e9eae961f7171335cf2550 apr-util-1.2.8.tar.gz 646379
-RMD160 00b10ef0aab26f3ea5d374e2400c1dba566a9020 apr-util-1.2.8.tar.gz 646379
-SHA256 6527cb0b3dd619acfca668412e84e52860dfd862054246ca903822d5ea824de6 apr-util-1.2.8.tar.gz 646379
