@@ -1,9 +1,0 @@
-MD5 814f19528d9cfc79aef188dd752e04d8 apr-1.2.8.tar.gz 1107189
-RMD160 299e1ddb1f7c9b0169a410e120c30abea38557c5 apr-1.2.8.tar.gz 1107189
-SHA256 96e31f0ea2e028f372d5fdbbd4f88f31d59e14eda85cd12153183759f8e221c7 apr-1.2.8.tar.gz 1107189
-MD5 a2e2e54d65e9eae961f7171335cf2550 apr-util-1.2.8.tar.gz 646379
-RMD160 00b10ef0aab26f3ea5d374e2400c1dba566a9020 apr-util-1.2.8.tar.gz 646379
-SHA256 6527cb0b3dd619acfca668412e84e52860dfd862054246ca903822d5ea824de6 apr-util-1.2.8.tar.gz 646379
-MD5 a9914273d9f27b3c1fbf9bb50e10627f apr_dbd_mysql-r84.c 49110
-RMD160 9d665f2e964b09f58b182829563a203f59e16640 apr_dbd_mysql-r84.c 49110
-SHA256 79893740a58c96fba6e04f800e950ec42d8128e034056ff8a5770e0d3acc4919 apr_dbd_mysql-r84.c 49110
