@@ -1,0 +1,3 @@
+MD5 020ea947446dca2d1210c099c7a4c837 apr-1.2.12.tar.gz 1127522
+RMD160 912c34e412b42e678288727b811ba35f03d07b6b apr-1.2.12.tar.gz 1127522
+SHA256 23759142c483be869a0aec0529c5b8c94745b4dfd1c2c23f38417f4e02adcead apr-1.2.12.tar.gz 1127522
