@@ -1,3 +1,0 @@
-MD5 814f19528d9cfc79aef188dd752e04d8 apr-1.2.8.tar.gz 1107189
-RMD160 299e1ddb1f7c9b0169a410e120c30abea38557c5 apr-1.2.8.tar.gz 1107189
-SHA256 96e31f0ea2e028f372d5fdbbd4f88f31d59e14eda85cd12153183759f8e221c7 apr-1.2.8.tar.gz 1107189
