@@ -1,3 +1,0 @@
-MD5 6f4b063ac01a54ba0818c31280f06959 apr-1.2.9.tar.gz 1109990
-RMD160 02d5e81c4bcc389a7c28dd19b96b792fad729ba8 apr-1.2.9.tar.gz 1109990
-SHA256 a41608b5ecd76b5d555b853c9907d55d1cf20e9d1686923eccbc1437ef967d13 apr-1.2.9.tar.gz 1109990
