@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/apr
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.99 2007/11/16 20:38:53 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.100 2007/12/15 14:24:41 hollow Exp $
+
+*apr-1.2.12 (15 Dec 2007)
+
+  15 Dec 2007; Benedikt Böhm <hollow@gentoo.org> -apr-1.2.8.ebuild,
+  -apr-1.2.9.ebuild, +apr-1.2.12.ebuild:
+  version bump; #200947
 
   16 Nov 2007; nixnut <nixnut@gentoo.org> apr-1.2.11.ebuild:
   Stable on ppc wrt bug 198866
