@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.104 2007/11/16 20:40:31 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.105 2007/12/15 14:26:31 hollow Exp $
+
+*apr-util-1.2.12 (15 Dec 2007)
+
+  15 Dec 2007; Benedikt Böhm <hollow@gentoo.org> -apr-util-1.2.8.ebuild,
+  -apr-util-1.2.8-r1.ebuild, +apr-util-1.2.12.ebuild:
+  version bump; #200947
 
   16 Nov 2007; nixnut <nixnut@gentoo.org> apr-util-1.2.10.ebuild:
   Stable on ppc wrt bug 198866
